--- a/src/components/matches-section/matches-section.twig
+++ b/src/components/matches-section/matches-section.twig
@@ -1,4 +1,4 @@
-<section class="matches-section">
+<section class="c-matches-section">
    <div class="menu-section">
       <div class="container">
          <div class="menu-section__inner">
@@ -51,11 +51,11 @@
       </div>   
    </div>
    <div class="container">
-      <div class="matches-section__inner">
+      <div class="c-matches-section__inner">
          <div class="o-content">
             <h2 class="h2">Únor 2022</h2>
          </div>
-         <div class="matches-section__box col-12 d-flex">
+         <div class="c-matches-section__box col-12 d-flex">
             <div class="col-lg-6 col-xl-12 match match--d d-flex align-items-center">
                <div class="match__type">
                   <h3 class="h3">d</h3>    
@@ -220,7 +220,7 @@
           <div class="o-content">
             <h2>Únor 2022</h2>
          </div>
-         <div class="matches-section__box col-12 d-flex">
+         <div class="c-matches-section__box col-12 d-flex">
             <div class="col-lg-6 col-xl-12 match match--d d-flex align-items-center">
                <div class="match__type">
                   <h3 class="h3">d</h3>    
@@ -385,7 +385,7 @@
           <div class="o-content">
             <h2>Únor 2022</h2>
          </div>
-         <div class="matches-section__box col-12 d-flex">
+         <div class="c-matches-section__box col-12 d-flex">
             <div class="col-lg-6 col-xl-12 match match--d d-flex align-items-center">
                <div class="match__type">
                   <h3 class="h3">d</h3>    
