--- a/src/components/partners-section/partners-section.twig
+++ b/src/components/partners-section/partners-section.twig
@@ -1,4 +1,4 @@
-<section class=" text-center py-2 mt-5">
+<section class="c-partners-section text-center py-2 mt-5">
   <div class="container">
     <ul class="row justify-content-center">
       <li class="col-auto ps-5 pe-5">
