--- a/src/components/photogallery-section/photogallery-section.twig
+++ b/src/components/photogallery-section/photogallery-section.twig
@@ -1,9 +1,9 @@
-<section class="fotogalerie-section">
+<section class="photogallery-section">
     <div class="menu-section">
       <div class="container">
          <div class="menu-section__inner">
             <h1 class="h1">
-             Fotogalerie
+             fotogalerie
             </h1>
             <form action="" class="ms-auto w-auto d-flex menu-section__form">
                <div class="d-flex mb-4 mb-md-0">
@@ -23,20 +23,20 @@
          </div>
       </div>   
    </div>
-   <div class="fotogalerie-section__inner mb-5 mb-md-10">
+   <div class="photogallery-section__inner mb-5 mb-md-10">
       <div class="container">
          <div class="row g-5 g-md-10 js-gallery">
             <div class="col-lg-4 col-sm-6 cl-12">
                <figure>
                   <a href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
                      <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
-                     <div class="fotogalerie-section__info">
-                        <h3 class="h3">
+                     <div class="photogallery-section__info">
+                        <h2 class="h3">
                            Slezský FC Opava obhájil statuty SCM a SpSM
-                        </h3>
+                        </h2>
                         <div class="date date--small date--blue">16. 12. 2021</div>
                      </div>
-                     <div class="fotogalerie-section__number"><span>22</span></div>
+                     <div class="photogallery-section__number"><span>22</span></div>
                   </a>
                </figure>
             </div>
@@ -44,13 +44,13 @@
                <figure>
                   <a href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
                      <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
-                     <div class="fotogalerie-section__info">
-                        <h3 class="h3">
+                     <div class="photogallery-section__info">
+                        <h2 class="h3">
                            Slezský FC Opava obhájil statuty SCM a SpSM
-                        </h3>
+                        </h2>
                         <div class="date date--small date--blue">16. 12. 2021</div>
                      </div>
-                     <div class="fotogalerie-section__number"><span>22</span></div>
+                     <div class="photogallery-section__number"><span>22</span></div>
                   </a>
                </figure>
             </div>
@@ -58,13 +58,13 @@
                <figure>
                   <a href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
                      <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
-                     <div class="fotogalerie-section__info">
-                        <h3 class="h3">
+                     <div class="photogallery-section__info">
+                        <h2 class="h3">
                            Slezský FC Opava obhájil statuty SCM a SpSM
-                        </h3>
+                        </h2>
                         <div class="date date--small date--blue">16. 12. 2021</div>
                      </div>
-                     <div class="fotogalerie-section__number"><span>22</span></div>
+                     <div class="photogallery-section__number"><span>22</span></div>
                   </a>
                </figure>
             </div>
@@ -72,13 +72,13 @@
                <figure>
                   <a href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
                      <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
-                     <div class="fotogalerie-section__info">
-                        <h3 class="h3">
+                     <div class="photogallery-section__info">
+                        <h2 class="h3">
                            Slezský FC Opava obhájil statuty SCM a SpSM
-                        </h3>
+                        </h2>
                         <div class="date date--small date--blue">16. 12. 2021</div>
                      </div>
-                     <div class="fotogalerie-section__number"><span>22</span></div>
+                     <div class="photogallery-section__number"><span>22</span></div>
                   </a>
                </figure>
             </div>
@@ -86,13 +86,13 @@
                <figure>
                   <a href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
                      <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
-                     <div class="fotogalerie-section__info">
-                        <h3 class="h3">
+                     <div class="photogallery-section__info">
+                        <h2 class="h3">
                            Slezský FC Opava obhájil statuty SCM a SpSM
-                        </h3>
+                        </h2>
                         <div class="date date--small date--blue">16. 12. 2021</div>
                      </div>
-                     <div class="fotogalerie-section__number"><span>22</span></div>
+                     <div class="photogallery-section__number"><span>22</span></div>
                   </a>
                </figure>
             </div>
@@ -100,13 +100,13 @@
                <figure>
                   <a href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
                      <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
-                     <div class="fotogalerie-section__info">
-                        <h3 class="h3">
+                     <div class="photogallery-section__info">
+                        <h2 class="h3">
                            Slezský FC Opava obhájil statuty SCM a SpSM
-                        </h3>
+                        </h2>
                         <div class="date date--small date--blue">16. 12. 2021</div>
                      </div>
-                     <div class="fotogalerie-section__number"><span>22</span></div>
+                     <div class="photogallery-section__number"><span>22</span></div>
                   </a>
                </figure>
             </div>
@@ -114,13 +114,13 @@
                <figure>
                   <a href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
                      <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
-                     <div class="fotogalerie-section__info">
-                        <h3 class="h3">
+                     <div class="photogallery-section__info">
+                        <h2 class="h3">
                            Slezský FC Opava obhájil statuty SCM a SpSM
-                        </h3>
+                        </h2>
                         <div class="date date--small date--blue">16. 12. 2021</div>
                      </div>
-                     <div class="fotogalerie-section__number"><span>22</span></div>
+                     <div class="photogallery-section__number"><span>22</span></div>
                   </a>
                </figure>
             </div>
@@ -128,13 +128,13 @@
                <figure>
                   <a href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
                      <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
-                     <div class="fotogalerie-section__info">
-                        <h3 class="h3">
+                     <div class="photogallery-section__info">
+                        <h2 class="h3">
                            Slezský FC Opava obhájil statuty SCM a SpSM
-                        </h3>
+                        </h2>
                         <div class="date date--small date--blue">16. 12. 2021</div>
                      </div>
-                     <div class="fotogalerie-section__number"><span>22</span></div>
+                     <div class="photogallery-section__number"><span>22</span></div>
                   </a>
                </figure>
             </div>
@@ -142,13 +142,13 @@
                <figure>
                   <a href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
                      <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
-                     <div class="fotogalerie-section__info">
-                        <h3 class="h3">
+                     <div class="photogallery-section__info">
+                        <h2 class="h3">
                            Slezský FC Opava obhájil statuty SCM a SpSM
-                        </h3>
+                        </h2>
                         <div class="date date--small date--blue">16. 12. 2021</div>
                      </div>
-                     <div class="fotogalerie-section__number"><span>22</span></div>
+                     <div class="photogallery-section__number"><span>22</span></div>
                   </a>
                </figure>
             </div>
