--- a/src/components/player-detail-section/player-detail-section.twig
+++ b/src/components/player-detail-section/player-detail-section.twig
@@ -1,5 +1,4 @@
-<section class="player-section">
-   <div class="player">
+   <section class="player">
       <div class="container">
          <div class="player__inner">
             <div class="player__wrapper">
@@ -73,7 +72,6 @@
                      Červená karta
                   </div>
                </div>
-               
                <div class="player__table">
                   <h2 class="h3">Posledních 5 zápasů</h2>
                   <table>
@@ -144,22 +142,4 @@
             </div>
          </div>
       </div>
-   </div>
-   
-   <div class="container">
-      <div class="o-content">
-         <h2 class="h2">Související články s hráčem</h2>
-       </div>
-      <div class="row flex-wrap  hp-posts__inner">
-         <div class="col-12 col-sm-6 col-lg-4 pe-5 ps-5 hp-posts__col">
-             {% include "@components/post/post.twig" %}
-         </div>
-          <div class="col-12 col-sm-6 col-lg-4 pe-5 ps-5 hp-posts__col">
-             {% include "@components/post/post.twig" %}
-         </div>
-          <div class="col-12 col-sm-6 col-lg-4 pe-5 ps-5 hp-posts__col">
-             {% include "@components/post/post.twig" %}
-         </div>
-      </div>
-   </div>
-</section>
+   </section>
