--- a/src/components/pub-section/pub-section.twig
+++ b/src/components/pub-section/pub-section.twig
@@ -1,4 +1,4 @@
-<section class="pub">
+<section class="c-pub-section">
    <div class="container">
       <div class="row  c-gallery-section ms-n5 me-n5">
          <div class="col-xl-6 ps-5 pe-5">
