--- a/src/components/slider-news-section/slider-news-section.scss
+++ b/src/components/slider-news-section/slider-news-section.scss
@@ -1,4 +1,4 @@
-.slider-news {
+.c-slider-news-section {
   margin-bottom: 40px;
   @include media-breakpoint-down(xxl) {
     padding-bottom: 60px;
