--- a/src/components/topstory-section/topstory-section.twig
+++ b/src/components/topstory-section/topstory-section.twig
@@ -1,9 +1,9 @@
-<section class="topstory">
+<section class="c-topstory-section">
    <div class="row m-0">
-      <div class="topstory__item">
-            <a class="topstory__img" href="#">
+      <div class="c-topstory-section__item">
+            <a class="c-topstory-section__img" href="#">
                <img src="images/content/1.jpg" loading="lazy" alt="">
-               <div class="topstory__info">
+               <div class="c-topstory-section__info">
                   <h1 class="h1">
                      Vítězná série pokračuje! Varnsdorf zlomily trefy Šiguta s Holíkem
                   </h1>
@@ -11,10 +11,10 @@
                </div>
             </a>
          </div>
-          <div class="topstory__item active">
-            <a class="topstory__img" href="#">
+          <div class="c-topstory-section__item active">
+            <a class="c-topstory-section__img" href="#">
                <img src="images/content/2.jpg" loading="lazy" alt="">
-               <div class="topstory__info">
+               <div class="c-topstory-section__info">
                   <h2 class="h1">
                      West po porážce s Brnem: Měli jsme rozhodnout v první půli
                   </h2>
@@ -22,10 +22,10 @@
                </div>
             </a>
          </div>
-         <div class="topstory__item">
-            <a class="topstory__img" href="#">
+         <div class="c-topstory-section__item">
+            <a class="c-topstory-section__img" href="#">
                <img src="images/content/3.jpg" loading="lazy" alt="">
-               <div class="topstory__info">
+               <div class="c-topstory-section__info">
                   <h2 class="h1">
                      Domácí neporazitelnost trvá! Výhru nad béčkem Sparty řídil Helešic
                   </h2>
