--- a/src/layouts/10.0_partneri.twig
+++ b/src/layouts/10.0_partneri.twig
@@ -3,7 +3,7 @@
    {% set title = "04.0_Partneři" %}
 
    {% block main %}
-      <section class="partners-section mt-5 mt-md-10"> 
+      <section class="partners-section pt-5 pt-md-10"> 
          <div class="container"> 
             <h1 class="h1">
                Hlavní partneři
