--- a/src/components/fanshop-section/fanshop-section.twig
+++ b/src/components/fanshop-section/fanshop-section.twig
@@ -1,16 +1,16 @@
-<section class="fanshop">
+<section class="c-c-fanshop-section-section">
    <div class="container">
          <div class="d-flex flex-wrap">
             <div class="col-xl-3 col-sm-6 col-12">
-               <a href="#" class="fanshop-link">
-                  <div class="fanshop-link__logo">
+               <a href="#" class="c-fanshop-section-link">
+                  <div class="c-fanshop-section-link__logo">
                      <img src="images/ico/logo.svg" loading="lazy" alt="">
                   </div>
                   <h2 class="h2">
                      Oficiální
                      e-shop
                   </h2>
-                  <div class="fanshop__btn fanshop__btn--blue">
+                  <div class="c-fanshop-section__btn c-fanshop-section__btn--blue">
                     {% include "@images/cart.svg" %} Navštívit
                   </div>
                </a>
@@ -20,7 +20,7 @@
                   <div class="product__img">
                      <img src="images/content/svetr.png" loading="lazy" alt="">
                   </div>
-                    <div class="fanshop__btn ">
+                    <div class="c-fanshop-section__btn ">
                     {% include "@images/cart.svg" %} 899 Kč
                   </div>
                </a>
@@ -30,7 +30,7 @@
                   <div class="product__img">
                      <img src="images/content/svetr.png" loading="lazy" alt="">
                   </div>
-                    <div class="fanshop__btn ">
+                    <div class="c-fanshop-section__btn ">
                     {% include "@images/cart.svg" %} 899 Kč
                   </div>
                </a>
@@ -40,7 +40,7 @@
                   <div class="product__img">
                      <img src="images/content/svetr.png" loading="lazy" alt="">
                   </div>
-                    <div class="fanshop__btn ">
+                    <div class="c-fanshop-section__btn ">
                     {% include "@images/cart.svg" %} 899 Kč
                   </div>
                </a>
