--- a/src/components/matches-dashboard-section/matches-dashboard-section.twig
+++ b/src/components/matches-dashboard-section/matches-dashboard-section.twig
@@ -1,26 +1,26 @@
-<section class="matches-dashboard">
+<section class="c-matches-dashboard-section">
    <div class="container">
       <div class="row ms-n5 me-n5">
          <div class="col-xl-4 col-lg-8 ps-5 pe-5 mx-auto">
-            <div class="u-shadow-2 matches-dashboard__box">
+            <div class="u-shadow-2 c-matches-dashboard-section__box">
                <p class="p2 mb-6">
                   14. kolo F:NL  /  so 6. 11. 2021, 18:30
                </p>
                 <div class="d-flex justify-content-center mb-8">
-                  <div class="matches-dashboard__team">
-                     <div class="matches-dashboard__logo">
+                  <div class="c-matches-dashboard-section__team">
+                     <div class="c-matches-dashboard-section__logo">
                         <img src="images/ico/logo.svg" alt="">
                      </div>
                      <h2 class="h5">
                         Opava
                      </п>
                   </div>
-                  <div class="matches-dashboard__info">
+                  <div class="c-matches-dashboard-section__info">
                      <span class="win">2:0</span>
                      vs.
                   </div>
-                   <div class="matches-dashboard__team">
-                     <div class="matches-dashboard__logo">
+                   <div class="c-matches-dashboard-section__team">
+                     <div class="c-matches-dashboard-section__logo">
                         <img src="images/content/team-2.png" alt="">
                      </div>
                      <h2 class="h5">
@@ -39,25 +39,25 @@
             </div>
          </div>
          <div class="col-xl-4 col-lg-8  ps-5 pe-5 mx-auto">
-            <div class="u-shadow-2 matches-dashboard__box">
+            <div class="u-shadow-2 c-matches-dashboard-section__box">
                <p class="p2 mb-6">
                   14. kolo F:NL  /  so 6. 11. 2021, 18:30
                </p>
                <div class="d-flex justify-content-center mb-8">
-                  <div class="matches-dashboard__team">
-                     <div class="matches-dashboard__logo">
+                  <div class="c-matches-dashboard-section__team">
+                     <div class="c-matches-dashboard-section__logo">
                         <img src="images/ico/logo.svg" alt="">
                      </div>
                      <h2 class="h5">
                         Opava
                      </h2>
                   </div>
-                  <div class="matches-dashboard__info">
+                  <div class="c-matches-dashboard-section__info">
                      <span>16:00</span>
                      vs.
                   </div>
-                   <div class="matches-dashboard__team">
-                     <div class="matches-dashboard__logo">
+                   <div class="c-matches-dashboard-section__team">
+                     <div class="c-matches-dashboard-section__logo">
                         <img src="images/content/team-2.png" alt="">
                      </div>
                      <h2 class="h5">
@@ -73,16 +73,16 @@
             </div>
          </div>
          <div class="col-xl-4 col-lg-8 ps-5 pe-5 mx-auto">
-            <div class=" u-shadow-2 matches-dashboard__table">
+            <div class=" u-shadow-2 c-matches-dashboard-section__table">
                <div class="d-flex flex-wrap justify-content-between align-items-center">
-                  <a href="https://www.fnliga.cz/" class="matches-dashboard__table-partner">
+                  <a href="https://www.fnliga.cz/" class="c-matches-dashboard-section__table-partner">
                      <img src="images/content/logo-fnl_2018.png" loading="lazy" alt="">
                   </a>
-                  <a href="#" class="matches-dashboard__table-link">
+                  <a href="#" class="c-matches-dashboard-section__table-link">
                      Celá tabulka
                   </a>
                </div>
-               <div class="matches-dashboard__table-wrapper">
+               <div class="c-matches-dashboard-section__table-wrapper">
                   <table>
                      <tr>
                         <td class="num">4.</td>
