--- a/src/components/team-section/team-section.twig
+++ b/src/components/team-section/team-section.twig
@@ -1,4 +1,4 @@
-<section class="team-section team">
+<section class="c-team-section team">
    <div class="menu-section">
       <div class="container">
          <div class="menu-section__inner">
@@ -22,37 +22,37 @@
          </div>
       </div>   
    </div>
-   <div class="team-section__items">
+   <div class="c-team-section__items">
         <div class="container">
          <ul class="row">
             <li class=" col-lg-4 col-xxl-3 col-sm-6  pe-5 ps-5">
-               <a  class="team-section__item" href="#">
-                  <div class="team-section__img">
+               <a  class="c-team-section__item" href="#">
+                  <div class="c-team-section__img">
                      <img src="images/content/david_mikula.png" loading="lazy" alt="" />
                   </div>
-                  <div class="team-section__info d-flex justify-content-between align-items-end   ">
+                  <div class="c-team-section__info d-flex justify-content-between align-items-end   ">
                      <h3 class="h2">
                         <span>David</span>
                         Mikula
                      </h3>
                      <p class="p4">trenér</p>
                   </div>
-                  <div class="team-section__hover">
+                  <div class="c-team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
                         <li class="d-flex ">
-                           <div class="team-section__hover-img">
+                           <div class="c-team-section__hover-img">
                                 <img src="images/ico/football.svg" loading="lazy" alt="" />
                            </div>
                            16
                         </li>
                          <li class="d-flex ">
-                           <div class="team-section__hover-img">
+                           <div class="c-team-section__hover-img">
                                 <img src="images/ico/clock.svg" loading="lazy" alt="" />
                            </div>
                            16
                         </li>
                          <li class="d-flex ">
-                           <div class="team-section__hover-img">
+                           <div class="c-team-section__hover-img">
                                 <img src="images/ico/shield.svg" loading="lazy" alt="" />
                            </div>
                            16
@@ -62,33 +62,33 @@
                </a>
             </li>
             <li class=" col-lg-4 col-xxl-3 col-sm-6 pe-5 ps-5">
-               <a  class="team-section__item" href="#">
-                  <div class="team-section__img">
+               <a  class="c-team-section__item" href="#">
+                  <div class="c-team-section__img">
                      <img src="images/content/david_mikula.png" loading="lazy" alt="" />
                   </div>
-                  <div class="team-section__info d-flex justify-content-between align-items-end   ">
+                  <div class="c-team-section__info d-flex justify-content-between align-items-end   ">
                      <h3 class="h2">
                         <span>David</span>
                         Mikula
                      </h3>
                      <p class="p4">asistent trenéra</p>
                   </div>
-                   <div class="team-section__hover">
+                   <div class="c-team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
                         <li class="d-flex ">
-                           <div class="team-section__hover-img">
+                           <div class="c-team-section__hover-img">
                                 <img src="images/ico/football.svg" loading="lazy" alt="" />
                            </div>
                            16
                         </li>
                          <li class="d-flex ">
-                           <div class="team-section__hover-img">
+                           <div class="c-team-section__hover-img">
                                 <img src="images/ico/clock.svg" loading="lazy" alt="" />
                            </div>
                            16
                         </li>
                          <li class="d-flex ">
-                           <div class="team-section__hover-img">
+                           <div class="c-team-section__hover-img">
                                 <img src="images/ico/shield.svg" loading="lazy" alt="" />
                            </div>
                            16
@@ -98,33 +98,33 @@
                </a>
             </li>
             <li class=" col-lg-4 col-xxl-3 col-sm-6 pe-5 ps-5">
-               <a  class="team-section__item" href="#">
-                  <div class="team-section__img">
+               <a  class="c-team-section__item" href="#">
+                  <div class="c-team-section__img">
                      <img src="images/content/david_mikula.png" loading="lazy" alt="" />
                   </div>
-                  <div class="team-section__info d-flex justify-content-between align-items-end   ">
+                  <div class="c-team-section__info d-flex justify-content-between align-items-end   ">
                      <h3 class="h2">
                         <span>David</span>
                         Mikula
                      </h3>
                      <p class="p4">trenér</p>
                   </div>
-                   <div class="team-section__hover">
+                   <div class="c-team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
                         <li class="d-flex ">
-                           <div class="team-section__hover-img">
+                           <div class="c-team-section__hover-img">
                                 <img src="images/ico/football.svg" loading="lazy" alt="" />
                            </div>
                            16
                         </li>
                          <li class="d-flex ">
-                           <div class="team-section__hover-img">
+                           <div class="c-team-section__hover-img">
                                 <img src="images/ico/clock.svg" loading="lazy" alt="" />
                            </div>
                            16
                         </li>
                          <li class="d-flex ">
-                           <div class="team-section__hover-img">
+                           <div class="c-team-section__hover-img">
                                 <img src="images/ico/shield.svg" loading="lazy" alt="" />
                            </div>
                            16
@@ -134,33 +134,33 @@
                </a>
             </li>
             <li class=" col-lg-4 col-xxl-3 col-sm-6 pe-5 ps-5">
-               <a  class="team-section__item" href="#">
-                  <div class="team-section__img">
+               <a  class="c-team-section__item" href="#">
+                  <div class="c-team-section__img">
                      <img src="images/content/david_mikula.png" loading="lazy" alt="" />
                   </div>
-                  <div class="team-section__info d-flex justify-content-between align-items-end   ">
+                  <div class="c-team-section__info d-flex justify-content-between align-items-end   ">
                      <h3 class="h2">
                         <span>David</span>
                         Mikula
                      </h3>
                      <p class="p4">kondiční trenér</p>
                   </div>
-                   <div class="team-section__hover">
+                   <div class="c-team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
                         <li class="d-flex ">
-                           <div class="team-section__hover-img">
+                           <div class="c-team-section__hover-img">
                                 <img src="images/ico/football.svg" loading="lazy" alt="" />
                            </div>
                            16
                         </li>
                          <li class="d-flex ">
-                           <div class="team-section__hover-img">
+                           <div class="c-team-section__hover-img">
                                 <img src="images/ico/clock.svg" loading="lazy" alt="" />
                            </div>
                            16
                         </li>
                          <li class="d-flex ">
-                           <div class="team-section__hover-img">
+                           <div class="c-team-section__hover-img">
                                 <img src="images/ico/shield.svg" loading="lazy" alt="" />
                            </div>
                            16
@@ -170,33 +170,33 @@
                </a>
             </li>
             <li class=" col-lg-4 col-xxl-3 col-sm-6 pe-5 ps-5">
-               <a  class="team-section__item" href="#">
-                  <div class="team-section__img">
+               <a  class="c-team-section__item" href="#">
+                  <div class="c-team-section__img">
                      <img src="images/content/david_mikula.png" loading="lazy" alt="" />
                   </div>
-                  <div class="team-section__info d-flex justify-content-between align-items-end   ">
+                  <div class="c-team-section__info d-flex justify-content-between align-items-end   ">
                      <h3 class="h2">
                         <span>David</span>
                         Mikula
                      </h3>
                      <p class="p4">kondiční trenér</p>
                   </div>
-                   <div class="team-section__hover">
+                   <div class="c-team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
                         <li class="d-flex ">
-                           <div class="team-section__hover-img">
+                           <div class="c-team-section__hover-img">
                                 <img src="images/ico/football.svg" loading="lazy" alt="" />
                            </div>
                            16
                         </li>
                          <li class="d-flex ">
-                           <div class="team-section__hover-img">
+                           <div class="c-team-section__hover-img">
                                 <img src="images/ico/clock.svg" loading="lazy" alt="" />
                            </div>
                            16
                         </li>
                          <li class="d-flex ">
-                           <div class="team-section__hover-img">
+                           <div class="c-team-section__hover-img">
                                 <img src="images/ico/shield.svg" loading="lazy" alt="" />
                            </div>
                            16
@@ -206,33 +206,33 @@
                </a>
             </li>
             <li class=" col-lg-4 col-xxl-3 col-sm-6 pe-5 ps-5">
-               <a  class="team-section__item" href="#">
-                  <div class="team-section__img">
+               <a  class="c-team-section__item" href="#">
+                  <div class="c-team-section__img">
                      <img src="images/content/david_mikula.png" loading="lazy" alt="" />
                   </div>
-                  <div class="team-section__info d-flex justify-content-between align-items-end   ">
+                  <div class="c-team-section__info d-flex justify-content-between align-items-end   ">
                      <h3 class="h2">
                         <span>David</span>
                         Mikula
                      </h3>
                      <p class="p4">trenér</p>
                   </div>
-                   <div class="team-section__hover">
+                   <div class="c-team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
                         <li class="d-flex ">
-                           <div class="team-section__hover-img">
+                           <div class="c-team-section__hover-img">
                                 <img src="images/ico/football.svg" loading="lazy" alt="" />
                            </div>
                            16
                         </li>
                          <li class="d-flex ">
-                           <div class="team-section__hover-img">
+                           <div class="c-team-section__hover-img">
                                 <img src="images/ico/clock.svg" loading="lazy" alt="" />
                            </div>
                            16
                         </li>
                          <li class="d-flex ">
-                           <div class="team-section__hover-img">
+                           <div class="c-team-section__hover-img">
                                 <img src="images/ico/shield.svg" loading="lazy" alt="" />
                            </div>
                            16
@@ -242,33 +242,33 @@
                </a>
             </li>
             <li class=" col-lg-4 col-xxl-3 col-sm-6 pe-5 ps-5">
-               <a  class="team-section__item" href="#">
-                  <div class="team-section__img">
+               <a  class="c-team-section__item" href="#">
+                  <div class="c-team-section__img">
                      <img src="images/content/david_mikula.png" loading="lazy" alt="" />
                   </div>
-                  <div class="team-section__info d-flex justify-content-between align-items-end   ">
+                  <div class="c-team-section__info d-flex justify-content-between align-items-end   ">
                      <h3 class="h2">
                         <span>David</span>
                         Mikula
                      </h3>
                      <p class="p4">trenér</p>
                   </div>
-                   <div class="team-section__hover">
+                   <div class="c-team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
                         <li class="d-flex ">
-                           <div class="team-section__hover-img">
+                           <div class="c-team-section__hover-img">
                                 <img src="images/ico/football.svg" loading="lazy" alt="" />
                            </div>
                            16
                         </li>
                          <li class="d-flex ">
-                           <div class="team-section__hover-img">
+                           <div class="c-team-section__hover-img">
                                 <img src="images/ico/clock.svg" loading="lazy" alt="" />
                            </div>
                            16
                         </li>
                          <li class="d-flex ">
-                           <div class="team-section__hover-img">
+                           <div class="c-team-section__hover-img">
                                 <img src="images/ico/shield.svg" loading="lazy" alt="" />
                            </div>
                            16
