--- a/src/layouts/06.0_typo.twig
+++ b/src/layouts/06.0_typo.twig
@@ -61,8 +61,8 @@
                <p>
                   Sedmadvacetiletý fotbalista má na svém kontě 50 prvoligových startů v dresu Zlína a Českých Budějovic. Druhou nejvyšší soutěž si zahrál za Sokolov, Hradec Králové a naposledy za Táborsko, kde na podzim naskočil do deseti utkání a vstřelil jeden gól. Sezonu si střihl také v nejvyšší slovenské soutěži, kde nastupoval za Senici. Nově bude působit ve Slezském FC.
                </p>
-               <div class="table-responsive">
-                  <table class="table">
+               <div>
+                  <table>
                      <thead>
                            <tr>
                            <th>První sloupec</th>
@@ -104,5 +104,5 @@
       </div>
    </div>
    {% include "@components/pub-section/pub-section.twig" %}
-   {% include "@components/partneri-section/partneri-section.twig" %}
+   {% include "@components/partners-section/partners-section.twig" %}
 {% endblock %}
