--- a/src/components/articles-player-section/articles-player-section.twig
+++ b/src/components/articles-player-section/articles-player-section.twig
@@ -1,4 +1,4 @@
-<section class="articles-player-section">
+<section class="c-articles-player-section">
    <div class="container">
    <h3 class="h2 mb-4">Související články s hráčem</h3>
       <div class="row flex-wrap  hp-posts__inner">
