--- a/src/components/fanshop-section/fanshop-section.twig
+++ b/src/components/fanshop-section/fanshop-section.twig
@@ -1,4 +1,4 @@
-<section class="c-c-fanshop-section-section">
+<section class="c-fanshop-section">
    <div class="container">
          <div class="d-flex flex-wrap">
             <div class="col-xl-3 col-sm-6 col-12">
