--- a/src/components/post-matches-section/post-matches-section.twig
+++ b/src/components/post-matches-section/post-matches-section.twig
@@ -1,9 +1,9 @@
-<article class="post-matches-section col-xl-8">
-   <div class="article-section__top">
-      <figure class="article-section__img">
+<article class="c-post-matches-section col-xl-8">
+   <div class="c-article-section__top">
+      <figure class="c-article-section__img">
          <img src="images/content/2.jpg" loading="lazy" alt="">
       </figure>
-      <div class="article-section__top-info">
+      <div class="c-article-section__top-info">
          <h1 class="h1 mb-6">
             West po porážce s Brnem: Měli jsme rozhodnout v první půli
          </h1>
@@ -75,33 +75,33 @@
             </div>
          </div>
          <div class="o-content mt-n5">
-            <div class="row js-gallery gx-2 article-section__fotogalerie mb-5" >
+            <div class="row js-gallery gx-2 c-article-section__fotogalerie mb-5" >
                <div class="col-md-3 col-6">
                   <figure>
-                     <a class="article-section__fotogalerie-foto" href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
+                     <a class="c-article-section__fotogalerie-foto" href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
                         <img src="https://via.placeholder.com/188x118" loading="lazy" alt="" />
                      </a>
                   </figure>
                </div>
                <div class="col-md-3 col-6">
                   <figure>
-                     <a class="article-section__fotogalerie-foto" href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
+                     <a class="c-article-section__fotogalerie-foto" href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
                         <img src="https://via.placeholder.com/188x118" loading="lazy" alt="" />
                      </a>
                   </figure>
                </div>
                <div class="col-md-3 col-6">
                   <figure>
-                     <a class="article-section__fotogalerie-foto" href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
+                     <a class="c-article-section__fotogalerie-foto" href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
                         <img src="https://via.placeholder.com/188x118" loading="lazy" alt="" />
                      </a>
                   </figure>
                </div>
                <div class="col-md-3 col-6">
                   <figure>
-                     <a class="article-section__fotogalerie-foto article-section__fotogalerie-link" href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
+                     <a class="c-article-section__fotogalerie-foto c-article-section__fotogalerie-link" href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
                         <img src="https://via.placeholder.com/188x118" loading="lazy" alt="" />
-                        <span class="article-section__fotogalerie-hover">+21</span>
+                        <span class="c-article-section__fotogalerie-hover">+21</span>
                      </a>
                   </figure>
                </div>
@@ -164,7 +164,7 @@
                </div>
             </q>
          </div>
-          <div class="article-section__bottom mt-4 ">
+          <div class="c-article-section__bottom mt-4 ">
             <span>sdílet</span>
             <ul class="share-menu">
                <li>
