--- a/src/layouts/10.0_partneri.twig
+++ b/src/layouts/10.0_partneri.twig
@@ -9,17 +9,17 @@
                Hlavní partneři
             </h1>
             <ul class="row g-5 g-md-10">
-               <li class="col-lg-4 col-sm-6 cl-12">
+               <li class="col-lg-4 col-sm-6 col-12">
                   <a target="_blank" href="#">
                      <img src="images/content/1.png" loading="lazy" alt="" />
                   </a>
                </li>
-                <li class="col-lg-4 col-sm-6 cl-12">
+                <li class="col-lg-4 col-sm-6 col-12">
                   <a target="_blank" href="#">
                      <img src="images/content/2.png" loading="lazy" alt="" />
                   </a>
                </li>
-                <li class="col-lg-4 col-sm-6 cl-12">
+                <li class="col-lg-4 col-sm-6 col-12">
                   <a target="_blank" href="#">
                      <img src="images/content/3.png" loading="lazy" alt="" />
                   </a>
@@ -29,42 +29,42 @@
                partneři
             </h2>
              <ul class="row g-5 g-md-10">
-               <li class="col-lg-3  col-sm-4 cl-12">
+               <li class="col-lg-3  col-sm-4 col-12">
                   <a target="_blank" href="#">
                      <img src="images/content/1.png" loading="lazy" alt="" />
                   </a>
                </li>
-                <li class="col-lg-3  col-sm-4 cl-12">
+                <li class="col-lg-3  col-sm-4 col-12">
                   <a target="_blank" href="#">
                      <img src="images/content/1.png" loading="lazy" alt="" />
                   </a>
                </li>
-                <li class="col-lg-3  col-sm-4 cl-12">
+                <li class="col-lg-3  col-sm-4 col-12">
                   <a target="_blank" href="#">
                      <img src="images/content/1.png" loading="lazy" alt="" />
                   </a>
                </li>
-                <li class="col-lg-3  col-sm-4 cl-12">
+                <li class="col-lg-3  col-sm-4 col-12">
                   <a target="_blank" href="#">
                      <img src="images/content/1.png" loading="lazy" alt="" />
                   </a>
                </li>
-                <li class="col-lg-3  col-sm-4 cl-12">
+                <li class="col-lg-3  col-sm-4 col-12">
                   <a target="_blank" href="#">
                      <img src="images/content/1.png" loading="lazy" alt="" />
                   </a>
                </li>
-                <li class="col-lg-3 col-sm-4 cl-12">
+                <li class="col-lg-3 col-sm-4 col-12">
                   <a target="_blank" href="#">
                      <img src="images/content/1.png" loading="lazy" alt="" />
                   </a>
                </li>
-                <li class="col-lg-3  col-sm-4 cl-12">
+                <li class="col-lg-3  col-sm-4 col-12">
                   <a target="_blank" href="#">
                      <img src="images/content/2.png" loading="lazy" alt="" />
                   </a>
                </li>
-                <li class="col-lg-3  col-sm-4 cl-12">
+                <li class="col-lg-3  col-sm-4 col-12">
                   <a target="_blank" href="#">
                      <img src="images/content/3.png" loading="lazy" alt="" />
                   </a>
@@ -72,17 +72,17 @@
             </ul>
             <h2 class="h2">Mediální partneři</h2>
             <ul class="row g-5 g-md-10">
-               <li class="col-lg-3  col-sm-4 cl-12">
+               <li class="col-lg-3  col-sm-4 col-12">
                   <a target="_blank" href="#">
                      <img src="images/content/3.png" loading="lazy" alt="" />
                   </a>
                </li>
-                <li class="col-lg-3  col-sm-4 cl-12">
+                <li class="col-lg-3  col-sm-4 col-12">
                   <a target="_blank" href="#">
                      <img src="images/content/3.png" loading="lazy" alt="" />
                   </a>
                </li>
-                <li class="col-lg-3  col-sm-4 cl-12">
+                <li class="col-lg-3  col-sm-4 col-12">
                   <a target="_blank" href="#">
                      <img src="images/content/3.png" loading="lazy" alt="" />
                   </a>
