--- a/src/layouts/10.0_partneri.twig
+++ b/src/layouts/10.0_partneri.twig
@@ -3,11 +3,9 @@
    {% set title = "04.0_Partneři" %}
 
    {% block main %}
-      <section class="partners-section pt-5 pt-md-10"> 
+      <section class="partners-section pt-5 pt-md-10 text-center"> 
          <div class="container"> 
-            <h1 class="h1">
-               Hlavní partneři
-            </h1>
+            <h1 class="h1">Generální partner</h1>
             <ul class="row g-5 g-md-10">
                <li class="col-lg-4 col-sm-6 col-12">
                   <a target="_blank" href="#">
@@ -26,8 +24,28 @@
                </li>
             </ul>
             <h2 class="h2">
-               partneři
+               Hlavní partneři
             </h2>
+            <ul class="row g-5 g-md-10">
+               <li class="col-lg-4 col-sm-6 col-12">
+                  <a target="_blank" href="#">
+                     <img src="images/content/1.png" loading="lazy" alt="" />
+                  </a>
+               </li>
+                <li class="col-lg-4 col-sm-6 col-12">
+                  <a target="_blank" href="#">
+                     <img src="images/content/2.png" loading="lazy" alt="" />
+                  </a>
+               </li>
+                <li class="col-lg-4 col-sm-6 col-12">
+                  <a target="_blank" href="#">
+                     <img src="images/content/3.png" loading="lazy" alt="" />
+                  </a>
+               </li>
+            </ul>
+            <h3 class="h2">
+               partneři
+            </h3>
              <ul class="row g-5 g-md-10">
                <li class="col-lg-3  col-sm-4 col-12">
                   <a target="_blank" href="#">
@@ -70,7 +88,7 @@
                   </a>
                </li>
             </ul>
-            <h2 class="h2">Mediální partneři</h2>
+            <h4 class="h2">Partneři mládeže</h4>
             <ul class="row g-5 g-md-10">
                <li class="col-lg-3  col-sm-4 col-12">
                   <a target="_blank" href="#">
@@ -83,6 +101,42 @@
                   </a>
                </li>
                 <li class="col-lg-3  col-sm-4 col-12">
+                  <a target="_blank" href="#">
+                     <img src="images/content/3.png" loading="lazy" alt="" />
+                  </a>
+               </li>
+            </ul>
+            <h5 class="h2">Mediální partneři</h5>
+            <ul class="row g-5 g-md-10">
+               <li class="col-lg-3  col-sm-4 col-12">
+                  <a target="_blank" href="#">
+                     <img src="images/content/3.png" loading="lazy" alt="" />
+                  </a>
+               </li>
+                <li class="col-lg-3  col-sm-4 col-12">
+                  <a target="_blank" href="#">
+                     <img src="images/content/3.png" loading="lazy" alt="" />
+                  </a>
+               </li>
+                <li class="col-lg-3  col-sm-4 col-12">
+                  <a target="_blank" href="#">
+                     <img src="images/content/3.png" loading="lazy" alt="" />
+                  </a>
+               </li>
+            </ul>
+            <h6 class="h2">spolupracujeme</h6>
+            <ul class="row g-5 g-md-10">
+               <li class="col-lg-4 col-sm-6 col-12">
+                  <a target="_blank" href="#">
+                     <img src="images/content/1.png" loading="lazy" alt="" />
+                  </a>
+               </li>
+                <li class="col-lg-4 col-sm-6 col-12">
+                  <a target="_blank" href="#">
+                     <img src="images/content/2.png" loading="lazy" alt="" />
+                  </a>
+               </li>
+                <li class="col-lg-4 col-sm-6 col-12">
                   <a target="_blank" href="#">
                      <img src="images/content/3.png" loading="lazy" alt="" />
                   </a>
