--- a/src/components/article-section/article-section.twig
+++ b/src/components/article-section/article-section.twig
@@ -83,28 +83,28 @@
          <div class="row js-gallery gx-2 c-article-section__fotogalerie" >
             <div class="col-md-3 col-6">
                <figure>
-                  <a class="c-article-section__fotogalerie-foto" href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
+                  <a class="c-article-section__fotogalerie-foto" data-gallery="1" data-gallery-id="1"  href="#">
                      <img src="https://via.placeholder.com/188x118" loading="lazy" alt="" />
                   </a>
                </figure>
             </div>
             <div class="col-md-3 col-6">
                <figure>
-                  <a class="c-article-section__fotogalerie-foto" href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
+                  <a class="c-article-section__fotogalerie-foto" data-gallery="1" data-gallery-id="1"  href="#">
                      <img src="https://via.placeholder.com/188x118" loading="lazy" alt="" />
                   </a>
                </figure>
             </div>
             <div class="col-md-3 col-6">
                <figure>
-                  <a class="c-article-section__fotogalerie-foto" href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
+                  <a class="c-article-section__fotogalerie-foto" data-gallery="1" data-gallery-id="1"  href="#">
                      <img src="https://via.placeholder.com/188x118" loading="lazy" alt="" />
                   </a>
                </figure>
             </div>
             <div class="col-md-3 col-6">
                <figure>
-                  <a class="c-article-section__fotogalerie-foto c-article-section__fotogalerie-link" href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
+                  <a class="c-article-section__fotogalerie-foto c-article-section__fotogalerie-link" data-gallery="1" data-gallery-id="1"  href="#">
                      <img src="https://via.placeholder.com/188x118" loading="lazy" alt="" />
                      <span class="c-article-section__fotogalerie-hover">+21</span>
                   </a>
