--- a/src/components/photogallery-section/photogallery-section.twig
+++ b/src/components/photogallery-section/photogallery-section.twig
@@ -25,10 +25,10 @@
    </div>
    <div class="photogallery-section__inner mb-5 mb-md-10">
       <div class="container">
-         <div class="row g-5 g-md-10 js-gallery">
+         <div class="row g-5 g-md-10">
             <div class="col-lg-4 col-sm-6 cl-12">
                <figure>
-                  <a href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
+                  <a data-gallery="1" data-gallery-id="1"  href="#">
                      <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
                      <div class="photogallery-section__info">
                         <h2 class="h3">
@@ -42,7 +42,7 @@
             </div>
             <div class="col-lg-4 col-sm-6 cl-12">
                <figure>
-                  <a href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
+                  <a data-gallery="1" data-gallery-id="1"  href="#">
                      <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
                      <div class="photogallery-section__info">
                         <h2 class="h3">
@@ -56,7 +56,7 @@
             </div>
             <div class="col-lg-4 col-sm-6 cl-12">
                <figure>
-                  <a href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
+                  <a data-gallery="1" data-gallery-id="1"  href="#">
                      <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
                      <div class="photogallery-section__info">
                         <h2 class="h3">
@@ -70,7 +70,7 @@
             </div>
             <div class="col-lg-4 col-sm-6 cl-12">
                <figure>
-                  <a href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
+                  <a data-gallery="1" data-gallery-id="1"  href="#">
                      <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
                      <div class="photogallery-section__info">
                         <h2 class="h3">
@@ -84,7 +84,7 @@
             </div>
             <div class="col-lg-4 col-sm-6 cl-12">
                <figure>
-                  <a href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
+                  <a data-gallery="1" data-gallery-id="1"  href="#">
                      <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
                      <div class="photogallery-section__info">
                         <h2 class="h3">
@@ -98,7 +98,7 @@
             </div>
             <div class="col-lg-4 col-sm-6 cl-12">
                <figure>
-                  <a href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
+                  <a data-gallery="1" data-gallery-id="1"  href="#">
                      <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
                      <div class="photogallery-section__info">
                         <h2 class="h3">
@@ -112,7 +112,7 @@
             </div>
             <div class="col-lg-4 col-sm-6 cl-12">
                <figure>
-                  <a href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
+                  <a data-gallery="1" data-gallery-id="1"  href="#">
                      <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
                      <div class="photogallery-section__info">
                         <h2 class="h3">
@@ -126,7 +126,7 @@
             </div>
             <div class="col-lg-4 col-sm-6 cl-12">
                <figure>
-                  <a href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
+                  <a data-gallery="1" data-gallery-id="1"  href="#">
                      <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
                      <div class="photogallery-section__info">
                         <h2 class="h3">
@@ -140,7 +140,7 @@
             </div>
             <div class="col-lg-4 col-sm-6 cl-12">
                <figure>
-                  <a href="https://via.placeholder.com/1024x1024" data-size="1024x1024">
+                  <a data-gallery="1" data-gallery-id="1"  href="#">
                      <img src="https://via.placeholder.com/408x408" loading="lazy" alt="" />
                      <div class="photogallery-section__info">
                         <h2 class="h3">
